# snow_reader

./: .gitignore  Cargo.toml  README.md  justfile  rustfmt.toml  typos.toml
examples/: hi.rs  logos_ex.rs  quickxml_ex.rs  qx_serd_ex.rs  qx_serd_ex2.rs  roxml_ex.rs
src/: differ.rs  error.rs  lib.rs  main.rs  notes.rs  snow_obj.rs  snow_serde.rs
