[package]
name = "snow_read"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15"
quick-xml = { version = "0.31", features = ["serde"] }
roxmltree = "0.20"
serde = { version = "1.0", features = ["derive", "std"] }
serde-xml-rs = "0.6"
similar = { version = "2.5", features = ["inline"]}
struct-field-names-as-array = "0.3"
