# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "snow_read"
version = "0.1.0"
edition = "2024"
authors = ["Ethan Skowronski-Lutz"]
description = "template workspace; explorative"
homepage = "https://github.com/ethanmsl/snow_read"
documentation = "https://github.com/ethanmsl/snow_read"
repository = "https://github.com/ethanmsl/snow_read"
keywords = ["template", "workspace", "explorative"]
# publish = []
# license = ""
# license-file = ""

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
allow_attributes = "warn"


[dependencies]
## ~ specific ~
### ~- xml parse options -~
quick-xml = { version = "0.37", features = [
    "serde",
    "serde-types",
    "serialize",
] }
roxmltree = "0.20"
serde-xml-rs = "0.6"

### ~- other -~
console = "0.15"
similar = { version = "2.5", features = ["inline"] }
struct-field-names-as-array = "0.3"


## --Async--
# futures = "0.3"
tokio = { version = "1", features = ["full", "tracing"] }

## --Interfaaace
### - CLI -
clap = { version = "4", features = [
    "env",
    "derive",
    "string",
    "unicode",
    "wrap_help",
] }
dialoguer = "0.11"
owo-colors = "4"
indicatif = "0.17"
### - egui -
egui = "0.30.0"
eframe = "0.30.0"
egui_extras = { version = "0.30.0", features = ["datepicker", "document-features", "syntect"] }

## --Diagnostics--
tracing = "0.1"
# tracing-appender = "0.2"
tracing-error = "0.2"
tracing-timing = "0.6"
tracing-subscriber = { version = "0.3", features = ["chrono", "env-filter"] }
tracing-tree = { version = "0.4.0", features = ["time"] }

## --Env & Files--
csv = "1"
dotenvy = "0.15"
# include_dir = "0.7"
secrecy = "0.10"
walkdir = "2"

## --Explore--
backon = { version = "1", features = ["tokio-sleep"] }
minijinja = { version = "2", default-features = false }

## --General--
bon = "3"
chrono = { version = "0.4", features = ["serde"] }
derive_more = { version = "1", features = [
    "full",
    "constructor",
    "error",
    "deref",
    "from",
] }
itertools = "0.13"
regex = { version = "1", features = ["logging"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

## --Networking--
reqwest = { version = "0.12", features = ["blocking", "json"] }

# Dev-Dependencies
## --Property Sample Testing--
quickcheck = "1"
quickcheck_macros = "1"
## --Test Trace-Logging--
test-log = { version = "0.2", features = ["trace"] }
logos = { version = "0.15.0", features = ["forbid_unsafe"] }
# logos = { version = "0.14.2", features = ["debug", "forbid_unsafe"] }
